fixing nasty image overflow on safari/chrome, hopefully will fix safari weird bolding issues

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    -webkit-font-smoothing: antialiased; /*hopefully this helps fix weird font bolding in Safari*/
 }
 
 *:not(fieldset) {
